# puppetboard

./: Dockerfile  pyproject.toml  requirements-docker.txt  requirements-test.txt  requirements.txt
puppetboard/: app.py  default_settings.py  docker_settings.py  utils.py
puppetboard/static/custom-natural-time-delta/: natural-time-delta.js
puppetboard/static/js/: radiator.js  utils.js
puppetboard/templates/: nodes_paged.html
puppetboard/views/: index.py  nodes.py  nodes_paged.py
